src/z80asm/z80asm2/t/40-syntax/expected/ddb_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/ddb_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/ddb_01.asm...
t/40-syntax/input/ddb_01.asm:1:4: error: Expression expected
    ddb
       ^
t/40-syntax/input/ddb_01.asm:2:1: error: Unterminated expression after "ddb"
    ddb ,
    ^
t/40-syntax/input/ddb_01.asm:4:17: error: Expression expected
    ddb 1,2,3,1+2*3,
                    ^
t/40-syntax/input/ddb_01.asm:5:17: error: Unexpected token: "@"
    ddb 1,2,3,1+2*3 @
                    ^
Program: ddb_01
    Modules:
        Module: ddb_01 (current)
            Sections:
                Section: "" (current)
                    Size: 0
    Statements:
        OpcodeStmt
            Location: t/40-syntax/input/ddb_01.asm:3:1
            Address: 0
            Bytes: 0 0 0 0 0 0 0 0
            Patches:
                Patch
                    Location: t/40-syntax/input/ddb_01.asm:3:5
                    Value type: Unknown
                    Expr: 1
                    Offset: 0, Size: 2
                    Type: BigEndian
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/ddb_01.asm:3:5
                            Value type: Unknown
                            Expr: 1
                Patch
                    Location: t/40-syntax/input/ddb_01.asm:3:7
                    Value type: Unknown
                    Expr: 2
                    Offset: 2, Size: 2
                    Type: BigEndian
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 2
                            Location: t/40-syntax/input/ddb_01.asm:3:7
                            Value type: Unknown
                            Expr: 2
                Patch
                    Location: t/40-syntax/input/ddb_01.asm:3:9
                    Value type: Unknown
                    Expr: 3
                    Offset: 4, Size: 2
                    Type: BigEndian
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 3
                            Location: t/40-syntax/input/ddb_01.asm:3:9
                            Value type: Unknown
                            Expr: 3
                Patch
                    Location: t/40-syntax/input/ddb_01.asm:3:13
                    Value type: Unknown
                    Expr: 1+2*3
                    Offset: 6, Size: 2
                    Type: BigEndian
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprBinary: +
                            Location: t/40-syntax/input/ddb_01.asm:3:13
                            Value type: Unknown
                            Expr: 1+2*3
                            LHS:
                                ExprLiteralInt: 1
                                    Location: t/40-syntax/input/ddb_01.asm:3:11
                                    Value type: Unknown
                            RHS:
                                ExprBinary: *
                                    Location: t/40-syntax/input/ddb_01.asm:3:15
                                    Value type: Unknown
                                    LHS:
                                        ExprLiteralInt: 2
                                            Location: t/40-syntax/input/ddb_01.asm:3:13
                                            Value type: Unknown
                                    RHS:
                                        ExprLiteralInt: 3
                                            Location: t/40-syntax/input/ddb_01.asm:3:15
                                            Value type: Unknown
